@startuml
namespace gtree {
    class Node << (S,Aquamarine) >> {
        - name string
        - hierarchy uint
        - index uint
        - brnch branch
        - parent *Node
        - children []*Node

        - setParent(parent *Node) 
        - addChild(child *Node) 
        - hasChild() bool
        - findChildByText(text string) *Node
        - isDirectlyUnder(node *Node) bool
        - isLastOfHierarchy() bool
        - isRoot() bool
        - setBranch(branchs ...string) 
        - branch() string
        - setPath(paths ...string) 
        - validatePath() error
        - path() string
        - clean() 
        - toJSONNode(jParent *jsonNode) *jsonNode
        - toTOMLNode(tParent *tomlNode) *tomlNode
        - toYAMLNode(yParent *yamlNode) *yamlNode

        + Add(text string) *Node

    }
    class branch << (S,Aquamarine) >> {
        - value string
        - path string

    }
    class branchFormat << (S,Aquamarine) >> {
        - directly string

    }
    class colorizeSpreaderPipeline << (S,Aquamarine) >> {
        - spread(ctx context.Context, w io.Writer, roots <font color=blue>chan</font> *Node) <font color=blue>chan</font> error

    }
    class colorizeSpreaderSimple << (S,Aquamarine) >> {
        - fileConsiderer *fileConsiderer
        - fileColor *color.Color
        - fileCounter *counter
        - dirColor *color.Color
        - dirCounter *counter

        - spread(w io.Writer, roots []*Node) error
        - spreadBranch(current *Node) string
        - colorize(current *Node) string
        - summary() string

    }
    class config << (S,Aquamarine) >> {
        - lastNodeFormat branchFormat
        - intermedialNodeFormat branchFormat
        - space spaceType
        - massive bool
        - ctx context.Context
        - encode encode
        - dryrun bool
        - fileExtensions []string

    }
    class counter << (S,Aquamarine) >> {
        - n uint
        - mu sync.Mutex

        - next() uint
        - reset() 
        - current() uint

    }
    class defaultGrowerPipeline << (S,Aquamarine) >> {
        - grow(ctx context.Context, roots <font color=blue>chan</font> *Node) (<font color=blue>chan</font> *Node, <font color=blue>chan</font> error)
        - worker(ctx context.Context, wg *sync.WaitGroup, roots <font color=blue>chan</font> *Node, nodes <font color=blue>chan</font> *Node, errc <font color=blue>chan</font> error) 

    }
    class defaultGrowerSimple << (S,Aquamarine) >> {
        - lastNodeFormat branchFormat
        - intermedialNodeFormat branchFormat
        - enabledValidation bool

        - grow(roots []*Node) error
        - assemble(current *Node) error
        - assembleBranch(current *Node) error
        - assembleBranchDirectly(current *Node) 
        - assembleBranchIndirectly(current *Node, parent *Node) 
        - assembleBranchFinally(current *Node, root *Node) 
        - enableValidation() 

    }
    class defaultMkdirerPipeline << (S,Aquamarine) >> {
        - mkdir(ctx context.Context, roots <font color=blue>chan</font> *Node) <font color=blue>chan</font> error
        - worker(ctx context.Context, wg *sync.WaitGroup, roots <font color=blue>chan</font> *Node, errc <font color=blue>chan</font> error) 

    }
    class defaultMkdirerSimple << (S,Aquamarine) >> {
        - fileConsiderer *fileConsiderer

        - mkdir(roots []*Node) error
        - isExistRoot(roots []*Node) bool
        - makeDirectoriesAndFiles(current *Node) error
        - mkdirAll(dir string) error
        - mkfile(path string) error

    }
    class defaultSpreaderPipeline << (S,Aquamarine) >> {
        - spread(ctx context.Context, w io.Writer, roots <font color=blue>chan</font> *Node) <font color=blue>chan</font> error
        - worker(ctx context.Context, wg *sync.WaitGroup, bw *bufio.Writer, roots <font color=blue>chan</font> *Node, errc <font color=blue>chan</font> error) 

    }
    class defaultSpreaderSimple << (S,Aquamarine) >> {
        - spread(w io.Writer, roots []*Node) error
        - spreadBranch(current *Node) string
        - write(w io.Writer, in string) error

    }
    class fileConsiderer << (S,Aquamarine) >> {
        - extensions []string

        - isFile(current *Node) bool

    }
    interface growerPipeline  {
        - grow( context.Context,  <font color=blue>chan</font> *Node) (<font color=blue>chan</font> *Node, <font color=blue>chan</font> error)
        - enableValidation() 

    }
    interface growerSimple  {
        - grow( []*Node) error
        - enableValidation() 

    }
    class gtree.Option << (T, #FF7700) >>  {
    }
    class gtree.encode << (T, #FF7700) >>  {
    }
    class gtree.spaceType << (T, #FF7700) >>  {
    }
    class inputFormatError << (S,Aquamarine) >> {
        - row string

        + Error() string

    }
    class jsonNode << (S,Aquamarine) >> {
        + Name string
        + Children []*jsonNode

    }
    class jsonSpreaderPipeline << (S,Aquamarine) >> {
        - spread(ctx context.Context, w io.Writer, roots <font color=blue>chan</font> *Node) <font color=blue>chan</font> error

    }
    class jsonSpreaderSimple << (S,Aquamarine) >> {
        - spread(w io.Writer, roots []*Node) error

    }
    interface mkdirerPipeline  {
        - mkdir( context.Context,  <font color=blue>chan</font> *Node) <font color=blue>chan</font> error

    }
    interface mkdirerSimple  {
        - mkdir( []*Node) error

    }
    class nodeGenerator << (S,Aquamarine) >> {
        - parser *markdown.Parser

        - generate(row string, idx uint) (*Node, error)
        - handleErr(err error, row string) error

    }
    class nopGrowerPipeline << (S,Aquamarine) >> {
        - grow(ctx context.Context, roots <font color=blue>chan</font> *Node) (<font color=blue>chan</font> *Node, <font color=blue>chan</font> error)

    }
    class nopGrowerSimple << (S,Aquamarine) >> {
        - grow(_ []*Node) error
        - enableValidation() 

    }
    class rootGeneratorPipeline << (S,Aquamarine) >> {
        - nodeGenerator *nodeGenerator

        - generate(ctx context.Context, blocks <font color=blue>chan</font> string) (<font color=blue>chan</font> *Node, <font color=blue>chan</font> error)
        - worker(ctx context.Context, wg *sync.WaitGroup, blocks <font color=blue>chan</font> string, rootc <font color=blue>chan</font> *Node, errc <font color=blue>chan</font> error) 

    }
    class rootGeneratorSimple << (S,Aquamarine) >> {
        - counter *counter
        - scanner *bufio.Scanner
        - nodeGenerator *nodeGenerator

        - generate() ([]*Node, error)

    }
    interface spreaderPipeline  {
        - spread( context.Context,  io.Writer,  <font color=blue>chan</font> *Node) <font color=blue>chan</font> error

    }
    interface spreaderSimple  {
        - spread( io.Writer,  []*Node) error

    }
    class stack << (S,Aquamarine) >> {
        - nodes *list.List

        - push(n *Node) *stack
        - pop() *Node
        - size() int
        - dfs(current *Node) 

    }
    class tomlNode << (S,Aquamarine) >> {
        + Name string
        + Children []*tomlNode

    }
    class tomlSpreaderPipeline << (S,Aquamarine) >> {
        - spread(ctx context.Context, w io.Writer, roots <font color=blue>chan</font> *Node) <font color=blue>chan</font> error

    }
    class tomlSpreaderSimple << (S,Aquamarine) >> {
        - spread(w io.Writer, roots []*Node) error

    }
    interface tree  {
        - output( io.Writer,  io.Reader,  *config) error
        - outputProgrammably( io.Writer,  *Node,  *config) error
        - mkdir( io.Reader,  *config) error
        - mkdirProgrammably( *Node,  *config) error

    }
    class treePipeline << (S,Aquamarine) >> {
        - grower growerPipeline
        - spreader spreaderPipeline
        - mkdirer mkdirerPipeline

        - output(w io.Writer, r io.Reader, cfg *config) error
        - outputProgrammably(w io.Writer, root *Node, cfg *config) error
        - mkdir(r io.Reader, cfg *config) error
        - mkdirProgrammably(root *Node, cfg *config) error
        - handlePipelineErr(ctx context.Context, echs ...<font color=blue>chan</font> error) error

    }
    class treeSimple << (S,Aquamarine) >> {
        - grower growerSimple
        - spreader spreaderSimple
        - mkdirer mkdirerSimple

        - output(w io.Writer, r io.Reader, cfg *config) error
        - outputProgrammably(w io.Writer, root *Node, cfg *config) error
        - mkdir(r io.Reader, cfg *config) error
        - mkdirProgrammably(root *Node, cfg *config) error

    }
    class yamlNode << (S,Aquamarine) >> {
        + Name string
        + Children []*yamlNode

    }
    class yamlSpreaderPipeline << (S,Aquamarine) >> {
        - spread(ctx context.Context, w io.Writer, roots <font color=blue>chan</font> *Node) <font color=blue>chan</font> error

    }
    class yamlSpreaderSimple << (S,Aquamarine) >> {
        - spread(w io.Writer, roots []*Node) error

    }
}
"gtree.colorizeSpreaderSimple" *-- "gtree.colorizeSpreaderPipeline"
"gtree.defaultSpreaderSimple" *-- "gtree.colorizeSpreaderSimple"
"gtree.defaultGrowerSimple" *-- "gtree.defaultGrowerPipeline"
"gtree.defaultMkdirerSimple" *-- "gtree.defaultMkdirerPipeline"
"gtree.defaultSpreaderSimple" *-- "gtree.defaultSpreaderPipeline"
"sync.Mutex" *-- "gtree.defaultSpreaderPipeline"
"gtree.nopGrowerSimple" *-- "gtree.nopGrowerPipeline"

"gtree.spreaderPipeline" <|-- "gtree.colorizeSpreaderPipeline"
"gtree.spreaderSimple" <|-- "gtree.colorizeSpreaderSimple"
"gtree.growerSimple" <|-- "gtree.defaultGrowerSimple"
"gtree.mkdirerPipeline" <|-- "gtree.defaultMkdirerPipeline"
"gtree.mkdirerSimple" <|-- "gtree.defaultMkdirerSimple"
"gtree.spreaderPipeline" <|-- "gtree.defaultSpreaderPipeline"
"gtree.spreaderSimple" <|-- "gtree.defaultSpreaderSimple"
"gtree.spreaderPipeline" <|-- "gtree.jsonSpreaderPipeline"
"gtree.spreaderSimple" <|-- "gtree.jsonSpreaderSimple"
"gtree.growerSimple" <|-- "gtree.nopGrowerSimple"
"gtree.spreaderPipeline" <|-- "gtree.tomlSpreaderPipeline"
"gtree.spreaderSimple" <|-- "gtree.tomlSpreaderSimple"
"gtree.tree" <|-- "gtree.treePipeline"
"gtree.tree" <|-- "gtree.treeSimple"
"gtree.spreaderPipeline" <|-- "gtree.yamlSpreaderPipeline"
"gtree.spreaderSimple" <|-- "gtree.yamlSpreaderSimple"

"__builtin__.int" #.. "gtree.encode"
"__builtin__.int" #.. "gtree.spaceType"
"gtree.<font color=blue>func</font>(*config) " #.. "gtree.Option"
hide fields
hide methods
@enduml
